added get all admins request, static
